# only_mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: app.py  auth.py  chat.py  db.py  mcp.py  oauth.py  resources.py
backend/app/core/: __init__.py  encoder.py  exceptions.py  schema.py  setup_logging.py
backend/app/helpers/: __init__.py  db.py  entities.py  entity_schemas.py  json_rpc_schemas.py  permissions.py  tokens.py  users.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Chat.tsx
frontend/src/pages/: EntitiesPage.tsx  LoginPage.tsx  OAuthLoginPage.tsx  RegisterPage.tsx
