[project]
name = "only-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "falcon>=4.0.2",
    "jsonschema>=4.23.0",
    "motor>=3.7.0",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "waitress>=3.0.2",
    "uvicorn>=0.20.0",
    "types-redis>=4.6.0.20241004",
]
